feat: add paella page

--- a/tmpl/web/ru/inc/nav-v2.html
+++ b/tmpl/web/ru/inc/nav-v2.html
@@ -23,6 +23,7 @@
                 <li><a href="/{{ locale }}/v2/docs/troubleshooting.html">Устранение неполадок</a></li>
             </ul>
         </li>
+        <li><a href="/{{ locale }}/v2/paella.html">Паэлья</a></li>
         <li><a href="/{{ locale }}/v2/roadmap.html">Дорожная карта</a></li>
         <li><a href="/{{ locale }}/v2/subscription.html">Подписка</a></li>
         <li><a href="/{{ locale }}/v2/contacts.html">Контакты</a></li>
