--- a/tmpl/web/ru/inc/layout-v2.html
+++ b/tmpl/web/ru/inc/layout-v2.html
@@ -33,8 +33,11 @@
 </head>
 <body>
 {% include "inc/nav-v2.html" %}
-<main>
-    {% block content %}{% endblock %}
+<main class="container">
+    <section class="section">
+        {% block content %}{% endblock %}
+        <p><a href="/{{ locale }}/v2/contacts.html" class="btn">Contact me</a></p>
+    </section>
 </main>
 </body>
 </html>
