--- a/tmpl/web/ru/inc/nav-v2.html
+++ b/tmpl/web/ru/inc/nav-v2.html
@@ -1,5 +1,6 @@
-<nav>
-    <ul class="main-menu" id="mainMenu">
+<nav class="nav">
+    <button class="menu-toggle nav__toggle" aria-controls="mainMenu" aria-expanded="false" onclick="toggleMenu(this)">☰</button>
+    <ul class="main-menu nav__menu" id="mainMenu">
         <li class="home-link">
             <a href="/{{ locale }}/v2/">
                 <img src="/favicon.ico" alt="Home" class="home-icon">
@@ -28,7 +29,6 @@
         <li><a href="/{{ locale }}/v2/subscription.html">Подписка</a></li>
         <li><a href="/{{ locale }}/v2/contacts.html">Контакты</a></li>
     </ul>
-
     <div class="nav-right">
         <div class="locale-switcher-inline">
             {% for loc in allowedLocales %}
@@ -40,47 +40,47 @@
             {% endif %}
             {% endfor %}
         </div>
-        <button class="menu-toggle" onclick="toggleMenu()">☰</button>
     </div>
 </nav>
 
 <script>
-    function toggleMenu() {
-        const menu = document.getElementById('mainMenu');
-        const navRight = document.querySelector('.nav-right');
-        if (menu) menu.classList.toggle('open');
-        if (navRight) navRight.classList.toggle('hidden-on-open');
+function toggleMenu(btn) {
+    const menu = document.getElementById('mainMenu');
+    if (!menu || !btn) return;
+    const expanded = btn.getAttribute('aria-expanded') === 'true';
+    btn.setAttribute('aria-expanded', String(!expanded));
+    menu.classList.toggle('is-open');
+}
+
+// @formatter:off
+function switchLocale(targetLocale) {
+    const allowed = {{ allowedLocales | dump | safe }};
+    const path = window.location.pathname;
+    const current = allowed.find(loc => path === `/${loc}` || path.startsWith(`/${loc}/`));
+    let basePath = path;
+
+    if (current) {
+        basePath = path.replace(new RegExp(`^/${current}`), '');
     }
+    window.location.href = `/${targetLocale}${basePath || '/'}`;
+    return false;
+}
+// @formatter:on
 
-    // @formatter:off
-    function switchLocale(targetLocale) {
-        const allowed = {{ allowedLocales | dump | safe }};
-        const path = window.location.pathname;
-        const current = allowed.find(loc => path === `/${loc}` || path.startsWith(`/${loc}/`));
-        let basePath = path;
-
-        if (current) {
-            basePath = path.replace(new RegExp(`^/${current}`), '');
-        }
-        window.location.href = `/${targetLocale}${basePath || '/'}`;
-        return false;
-    }
-    // @formatter:on
-
-    document.addEventListener('DOMContentLoaded', () => {
-        if (window.innerWidth <= 768) {
-            const toggles = document.querySelectorAll('.main-menu > li > span');
-            toggles.forEach(span => {
-                span.addEventListener('click', () => {
-                    const parent = span.parentElement;
-                    parent.classList.toggle('open');
-                    const submenu = span.nextElementSibling;
-                    if (submenu) {
-                        const expanded = submenu.style.maxHeight;
-                        submenu.style.maxHeight = expanded ? null : submenu.scrollHeight + 'px';
-                    }
-                });
+document.addEventListener('DOMContentLoaded', () => {
+    if (window.innerWidth <= 768) {
+        const toggles = document.querySelectorAll('.main-menu > li > span');
+        toggles.forEach(span => {
+            span.addEventListener('click', () => {
+                const parent = span.parentElement;
+                parent.classList.toggle('open');
+                const submenu = span.nextElementSibling;
+                if (submenu) {
+                    const expanded = submenu.style.maxHeight;
+                    submenu.style.maxHeight = expanded ? null : submenu.scrollHeight + 'px';
+                }
             });
-        }
-    });
+        });
+    }
+});
 </script>
