--- a/tmpl/web/en/v2/contacts.html
+++ b/tmpl/web/en/v2/contacts.html
@@ -45,4 +45,6 @@
 <h2>Notes</h2>
 <p>I reply in Russian or English. Telegram works for quick questions, email is best for detailed discussions. Response time may vary with workload.</p>
 
+<p><a href="/{{ locale }}/v2/contacts.html" class="btn">Contact me</a></p>
+
 {% endblock %}
