--- a/tmpl/web/ru/v2/contacts.html
+++ b/tmpl/web/ru/v2/contacts.html
@@ -45,4 +45,6 @@
 <h2>Уточнения</h2>
 <p>Отвечаю на русском и английском. Быстрые вопросы удобнее через Telegram, подробные — по email. Время ответа зависит от текущей загрузки.</p>
 
+<p><a href="/{{ locale }}/v2/contacts.html" class="btn">Связаться со мной</a></p>
+
 {% endblock %}
