--- a/tmpl/web/ru/inc/nav-v2.html
+++ b/tmpl/web/ru/inc/nav-v2.html
@@ -1,3 +1,4 @@
+<header class="site-header">
 <nav class="nav">
     <button class="menu-toggle nav__toggle" aria-controls="mainMenu" aria-expanded="false" onclick="toggleMenu(this)">☰</button>
     <ul class="main-menu nav__menu" id="mainMenu">
@@ -42,6 +43,7 @@
         </div>
     </div>
 </nav>
+</header>
 
 <script>
 function toggleMenu(btn) {
